# FastLED

./: .aider.chat.history.md  .aider.input.history  .aiderignore  .clang-format  .clang-tidy  .clangd  .coderabbit.yaml  .curserrules  .cursorignore  .cursorrules  .dockerignore  .editorconfig  .flake8  .gitattributes  .gitignore  .gitmodules  .pyrightconfig.json  .travis.yml  ADVANCED_DEVELOPMENT.md  ALL_SRC_REFACTOR.md  ANALYSIS_BUG_JSON.md  ANALYSIS_JSON_BUG.md  APA102.md  ASYNC_TASK.md  AUDIO_ARCHITECTURE.md  AUDIO_EXAMPLE_FIX_SUMMARY.md  AUDIO_REACTIVE.md  BACKGROUND_AGENT_TESTING_REQUIREMENTS.md  BACKUP_WASM_JSON_FIXES.md  BUG.md  BUG2.md  BUG_GRADIENT_HUEUES.md  BUG_IDF5_5_GIT_BASH.md  BUG_JSON.md  CLAUDE.md  CLEAN.md  CMAKE_LISTS_REFACTOR.md  CMakeLists.txt  CNAME  CONCURRENCY_FUTURE_API_DESIGN.md  (+298 more)
ci/lint_cpp_rs/: Cargo.toml
ci/meson/: README.md  __init__.py  ar_content_preserving.py  build_config.py  build_optimizer.py  build_timer.py  cache_utils.py  compile.py  compiler.py  discover_example_includes.py  discover_example_sources.py  discover_examples.py  discover_examples_all.py  example_metadata_cache.py  filter_examples_for_stub.py  get_runtime_dll_paths.py  io_utils.py  link_retry.py  meson.build  meson_cleanup.py  meson_markers.py  meson_options.txt  meson_setup_execute.py  meson_setup_phases.py  native_launchers.py  output.py  path_normalization.py  phase_tracker.py  rglob.py  runner.py  runner_helpers.py  sanitizer_env.py  sequential_runner.py  src_metadata_cache.py  streaming.py  streaming_runner.py  test_discovery.py  test_execution.py  testlog_parser.py  wasm_cross_file.ini
ci/wasm_build_package/: pyproject.toml
dev/: clean  (+31 more)
examples/: AGENTS.md  Brake Light Patterns  README.md  TODO.md  meson.build
examples/AdafruitBridge/: AdafruitBridge.ino
examples/AnalogOutput/: .test.skip.esp32  AnalogOutput.ino  compat.h
examples/Animartrix/: Animartrix.ino
examples/Animartrix2/: Animartrix2.ino
examples/AnimartrixRing/: AnimartrixRing.ino  audio_reactive.h  sound_orchestrator.cpp  sound_orchestrator.h
examples/Apa102/: Apa102.ino
examples/Apa102HD/: Apa102HD.ino
examples/Apa102HDOverride/: Apa102HDOverride.ino
examples/Async/: Async.h  Async.ino
examples/Audio/: Audio.ino  fx.h  fx_audio.h
examples/Audio2/: Audio2.ino
examples/AudioFftParity/: AudioFftParity.ino
examples/AudioInput/: AudioInput.h  AudioInput.ino  ESP32AudioInput.h  TeensyAudioInput.h
examples/AudioReactive/: AudioReactive.ino
examples/AudioUrl/: AudioUrl.ino
examples/AutoResearch/: AutoResearch.ino  AutoResearchAnimartrixBench.h  AutoResearchAsync.h  AutoResearchBle.cpp  AutoResearchEdgeProbe.cpp  AutoResearchEdgeProbe.h  AutoResearchFlexIo.h  AutoResearchHelpers.cpp  AutoResearchHelpers.h  AutoResearchIeee754.h  AutoResearchLowMemory.h  AutoResearchNet.cpp  AutoResearchOta.cpp  AutoResearchParlioEncode.h  AutoResearchParlioStream.h  AutoResearchPlatform.h  AutoResearchPwmDmaClockless.h  AutoResearchRemote.cpp  AutoResearchRemote.h  AutoResearchRemoteAsyncMethods.cpp  AutoResearchRemoteAsyncNetMethods.cpp  AutoResearchRemoteBasicMethods.cpp  AutoResearchRemoteBenchmarkMethods.cpp  AutoResearchRemoteCoroutineMethods.cpp  AutoResearchRemoteDriverMethods.cpp  AutoResearchRemoteFlexioMethods.cpp  AutoResearchRemoteGpioMethods.cpp  AutoResearchRemoteMathMethods.cpp  AutoResearchRemoteNetworkMethods.cpp  AutoResearchRemotePerfMethods.cpp  AutoResearchRemotePinMethods.cpp  AutoResearchRemoteRpSpiMethods.cpp  AutoResearchRemoteRunParallelTest.cpp  AutoResearchRemoteRunSingleTest.cpp  AutoResearchRemoteSystemMethods.cpp  AutoResearchSpiDma.h  AutoResearchStartupHook.cpp  AutoResearchTest.cpp  AutoResearchTest.h  AutoResearchTimingDrift.h  (+4 more)
examples/AutoResearchLpc/: AutoResearchLpc.ino
examples/BeatDetection/: BeatDetection.ino
examples/BilinearCompression/: BilinearCompression.ino
examples/Blink/: Blink.ino
examples/BlinkLPC845/: build_info.json  platformio.ini
examples/BlinkLPC845Arduino/: Blink.ino  SerialTest.ino  lpc845_flash.ld  platformio.ini
examples/BlinkLPC845CMSIS/: platformio.ini
examples/BlinkParallel/: BlinkParallel.ino  esp32.h  fled.h
examples/Blur/: Blur.ino
examples/Blur2d/: Blur2d.ino
examples/BuildVerificationHelper/: .test.skip.gemma  .test.skip.stm32  BuildVerificationHelper.ino
examples/Bulk/: Bulk.ino
examples/Chromancer/: Chromancer.ino  data.h  detail.h  gen.py  mapping.h  net.h  output.json  presets.json  ripple.h  screenmap.json.h
examples/Codec/: Codec.ino  codec_processor.cpp  codec_processor.h  inlined_data.cpp  inlined_data.h  sample_mpeg1_data.h
examples/CodecJpeg/: CodecJpeg.ino
examples/CodecMpeg1/: CodecMpeg1.ino
examples/ColorBoost/: ColorBoost.h  ColorBoost.ino
src/: CMakeLists.txt  FastLED.cpp  FastLED.cpp.hpp  FastLED.h  README.md  _build.cpp  _build.cpp.hpp  _fl_compile.cpp  _fx_compile.cpp  _readme  allocator.cpp  allocator.h  arduino_compile.cpp  bilinear_expansion.cpp  bilinear_expansion.h  bitswap.cpp  bitswap.h  callback.h  chipsets.h  chsv.h  cled_controller.cpp  cled_controller.cpp.hpp  cled_controller.h  color.h  colorpalettes.cpp  colorpalettes.cpp.hpp  colorpalettes.h  colorutils.cpp  colorutils.h  controller.h  cpixel_ledcontroller.h  cpp_compat.h  crgb.cpp  crgb.cpp.hpp  crgb.h  crgb.hpp  dither_mode.h  dmx.h  endframe.h  engine_events.cpp  (+89 more)
tests/: AGENTS.md  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README_CACHE.md  build_flags.toml  cmake_install.cmake  codec_common.cpp  codec_jpeg.cpp  codec_mpeg1.cpp  compile.py  crash_handler.h  crash_handler_execinfo.h  crash_handler_libunwind.h  crash_handler_noop.h  crash_handler_win.h  discover_tests.py  doctest.h  doctest_main.cpp  fastled.cpp  fastled_core.cpp  lsan_suppressions.txt  measure_esp32s3_opt_ins.py  meson.build  organize_tests.py  power_mgt.cpp  readme  run.py  sketch_runner_demo.cpp  test.h  test_active_strip_data_json.cpp  test_algorithm.cpp  test_allocator.cpp  test_allocator_inlined.cpp  test_allocator_inlined_slab.cpp  test_allocator_realloc.cpp  test_allocator_slab.cpp  test_apa102_hd.cpp  test_arduino_wasm.cpp  (+225 more)
(+110185 files in other folders)
